--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,13 +15,17 @@ builds:
 archives:
   - formats: [tar.gz]
 
-homebrew_casks:
+brews:
   - repository:
       owner: zulerne
       name: homebrew-tap
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
+    directory: Formula
     homepage: https://github.com/zulerne/ccost
     description: Fast CLI to analyze Claude Code token usage and costs
+    license: MIT
+    install: |
+      bin.install "ccost"
 
 checksum:
   name_template: checksums.txt
