feat: add --version flag with ldflags injection

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,6 +3,8 @@ version: 2
 builds:
   - main: ./cmd/ccost
     binary: ccost
+    ldflags:
+      - -s -w -X main.version={{.Version}}
     env:
       - CGO_ENABLED=0
     goos:
