--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,11 @@ jobs:
         with:
           go-version: "1.26"
 
+      - name: Check formatting
+        run: test -z "$(gofmt -l .)"
+
+      - name: Check go mod tidy
+        run: go mod tidy && git diff --exit-code go.mod go.sum
+
       - run: go vet ./...
-      - run: go test ./...
+      - run: go test -race ./...
