chore: improve Makefile, gitignore, and goreleaser changelog
- Inject version from git tags in Makefile build
- Add clean and coverage targets to Makefile
- Add .DS_Store and coverage.out to .gitignore
- Categorize and filter goreleaser changelog

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -34,3 +34,16 @@ checksum:
 
 changelog:
   sort: asc
+  filters:
+    exclude:
+      - "^chore:"
+      - "^docs:"
+      - "^ci:"
+      - "^test:"
+  groups:
+    - title: Bug Fixes
+      regexp: "^fix:"
+    - title: Features
+      regexp: "^feat:"
+    - title: Other
+      regexp: ".*"
